# well_nexus

./: readme.md
Frontend/: README.md  abi.json  package.json
Frontend/public/: index.html
Frontend/src/: App.jsx  AppLayout.jsx  index.jsx  layouts.js
Frontend/src/UI/ActionButton/: index.jsx
Frontend/src/UI/Avatar/: index.jsx
Frontend/src/UI/Badge/: style.js
Frontend/src/UI/Btn/: index.jsx
Frontend/src/UI/Checkbox/: index.jsx
Frontend/src/UI/CustomRating/: index.jsx
Frontend/src/UI/Field/: index.jsx
Frontend/src/UI/GroupSeparator/: index.jsx
Frontend/src/UI/IconLink/: index.jsx
Frontend/src/UI/Legend/: style.js
Frontend/src/constants/: address.js  options.js  wellnexusabi.js
Frontend/src/contexts/: interfaceContext.js
Frontend/src/db/: messenger.js  payments_history.js  staff.js
Frontend/src/pages/: DashboardK.jsx  Finances.jsx  PageNotFound.jsx
Frontend/src/store/: store.js
Frontend/src/styles/: keyframes.js
Frontend/wellnexus/: networks.json  package.json  schema.graphql  subgraph.yaml
Frontend/wellnexus/src/: wellnexus.ts
Frontend/wellnexus/tests/: wellnexus-utils.ts  wellnexus.test.ts
backend/: Cargo.toml  wellnexus.sqlite
backend/migrations/2024-05-09-211238_create_message/: down.sql  up.sql
backend/src/: main.rs  models.rs  schema.rs
smart_contract/script/: WellNexu.s.sol
smart_contract/src/: Usdt.sol  WellNexus.sol
wellnexusgrap/: networks.json  package.json  subgraph.yaml
wellnexusgrap/abis/: WellNexus.json
wellnexusgrap/src/: well-nexus.ts
wellnexusgrap/tests/: well-nexus-utils.ts  well-nexus.test.ts
(+80 files in other folders)
