[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
diesel = { version = "2.1.6", features = ["sqlite"] }
dotenvy = "0.15.7"
serde = "1.0.201"
serde_json = "1.0.117"
socketioxide = "0.13.1"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
